--- a/SaludoProyecto/pom.xml
+++ b/SaludoProyecto/pom.xml
@@ -10,7 +10,7 @@
       <dependency>
       	<groupId>org.springframework</groupId>
       	<artifactId>spring-context-support</artifactId>
-      	<version>3.2.4.RELEASE</version>
+      	<version>4.0.1RELEASE</version>
       </dependency>
       
   </dependencies>
